--- a/STM32/readme
+++ b/STM32/readme
@@ -1,1 +1,3 @@
 The discussion forum for this code is here - https://forums.makermax.ca/c/batterymasterclass/refreshed-hardware-kit-for-the-battery-masterclass
+
+The IDE used was STM32CubeIDE
